[project]
name = "influencer-aunty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langsmith>=0.6.6",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pymongo>=4.6.0",
    "pydantic>=2.5.0",
]
